--- a/Degree-Average-Front/src/app/components/nav-bar/nav-bar/nav-bar.component.html
+++ b/Degree-Average-Front/src/app/components/nav-bar/nav-bar/nav-bar.component.html
@@ -1,11 +1,11 @@
 <mat-toolbar color="primary">
 
-  <span > <a routerLink="/"> My Application</a></span>
+  <span > <a routerLink="/"> Averages </a></span>
 
   <span style="margin-left: 4rem;"><a  mat-button routerLink="/statistic" routerLinkActive="mat-accent">Statistic</a>
   </span>
 
-  <span style="margin-left: 4rem;"><a  mat-button routerLink="/addcourse" routerLinkActive="mat-accent">Add Course</a>
+  <span style="margin-left: 4rem;"><a  mat-button routerLink="/addcourse" routerLinkActive="mat-accent" >Add Course</a>
   </span>
 
   
