--- a/Degree-Average-Front/src/app/components/table-data/table-courses/table-courses.component.css
+++ b/Degree-Average-Front/src/app/components/table-data/table-courses/table-courses.component.css
@@ -81,3 +81,7 @@ tr.example-element-row:not(.example-expanded-row):active {
   flex: 1 1 auto;
 }
 
+.header-table {
+  color: blue;
+  background-color: rgb(230, 230, 230);
+}
