--- a/Degree-Average-Front/src/app/components/info-data/info-data/statistic/statistic/statistic.component.html
+++ b/Degree-Average-Front/src/app/components/info-data/info-data/statistic/statistic/statistic.component.html
@@ -45,14 +45,14 @@
   <form class="example-form">
     <mat-form-field class="example-full-width" appearance="standard">
       <mat-label>Points</mat-label>
-      <input mdInput [formControl]="emailFormControl" type="number" matInput placeholder="Points" value="value" min="0"
+      <input mdInput [formControl]="freePointsControl" type="number" matInput placeholder="Points" value="value" min="0"
         max="12" step="0.5">
     </mat-form-field>
   </form>
 
   <div class="sidespace">
     <p>Value : {{value}}</p>
-    <p>Value FormControl : {{emailFormControl.value}}</p>
+    <p>Value FormControl : {{freePointsControl.value}}</p>
     <p [ngClass]="{'make-red' :   numberFreePoints > 100 }">Freestyle Points : {{ numberFreePoints }}</p>
   </div>
 
