--- a/Degree-Average-Front/src/app/components/table-data/table-courses/table-courses.component.html
+++ b/Degree-Average-Front/src/app/components/table-data/table-courses/table-courses.component.html
@@ -1,40 +1,49 @@
 <app-info-data></app-info-data>
 
 
-<table mat-table [dataSource]="dataSource" multiTemplateDataRows class="mat-elevation-z8" style="color: red;">
+<table mat-table [dataSource]="dataSource" multiTemplateDataRows class="mat-elevation-z8" style="color: red;"
+matSort (matSortChange)="announceSortChange()"
+>
   <ng-container matColumnDef="{{column}}" *ngFor="let column of columnsToDisplay; let i = index">
-    <th mat-header-cell *matHeaderCellDef style="color : blue ; background-color: rgb(230, 230, 230);">
+
+    <!-- <th mat-header-cell *matHeaderCellDef mat-sort-header> Name </th>
+    <td mat-cell *matCellDef="let element"> {{element.position}} </td> -->
+    
+    <th mat-header-cell *matHeaderCellDef class="header-table" mat-sort-header sortActionDescription="Sort by name"> 
       {{ConvertToTitleCase(column)}} </th>
+
     <td mat-cell *matCellDef="let element"> {{element[column]}} </td>
+    
   </ng-container>
 
   <!-- Expanded Content Column - The detail row is made up of this one column that spans across all columns -->
   <ng-container matColumnDef="expandedDetail">
     <td mat-cell *matCellDef="let element" [attr.colspan]="columnsToDisplay.length">
 
-      <div class="example-element-detail" [@detailExpand]="element == expandedElement ? 'expanded' : 'collapsed'">
-        <span class="spacer"></span>
-        <div>
+        <div class="example-element-detail" [@detailExpand]="element == expandedElement ? 'expanded' : 'collapsed'">
+          <span class="spacer"></span>
+          <div>
 
-
-          <button mat-stroked-button color="accent" class="inner-button">Edit</button>
-          <button mat-stroked-button color="warn" class="inner-button" (click)="deleteCourse(0)">Delete</button>
-
-          <!-- <div class="example-element-description">
-          {{element.description}}
-          <span class="example-element-description-attribution"> -- Wikipedia </span>
-        </div> -->
-
-
-          <!-- <div style="margin-bottom: 1rem;"></div> -->
-
+            
+            
+            
+            <button mat-stroked-button color="accent" class="inner-button">Edit</button>
+            <button mat-stroked-button color="warn" class="inner-button" (click)="deleteCourse(0)">Delete</button>
+            
+            <!-- <div class="example-element-description">
+              {{element.description}}
+              <span class="example-element-description-attribution"> -- Wikipedia </span>
+            </div> -->
+            
+            
+            <!-- <div style="margin-bottom: 1rem;"></div> -->
+            
+          </div>
         </div>
-      </div>
-
+        
     </td>
   </ng-container>
-
-  <tr mat-header-row *matHeaderRowDef="columnsToDisplay"></tr>
+  <tr mat-header-row *matHeaderRowDef="columnsToDisplay; sticky: true"></tr>
   <tr mat-row *matRowDef="let element; columns: columnsToDisplay;" class="example-element-row"
     [class.example-expanded-row]="expandedElement === element"
     (click)="expandedElement = expandedElement === element ? null : element">
