--- a/Degree-Average-Front/src/app/components/table-data/table-courses/table-courses.component.html
+++ b/Degree-Average-Front/src/app/components/table-data/table-courses/table-courses.component.html
@@ -1,46 +1,55 @@
 <app-info-data></app-info-data>
 
 
-<table mat-table [dataSource]="dataSource" multiTemplateDataRows class="mat-elevation-z8" style="color: red;"
-matSort (matSortChange)="announceSortChange()"
->
+<table mat-table [dataSource]="dataSource" multiTemplateDataRows class="mat-elevation-z8" style="color: red;" matSort
+  (matSortChange)="announceSortChange()">
   <ng-container matColumnDef="{{column}}" *ngFor="let column of columnsToDisplay; let i = index">
 
     <!-- <th mat-header-cell *matHeaderCellDef mat-sort-header> Name </th>
     <td mat-cell *matCellDef="let element"> {{element.position}} </td> -->
-    
-    <th mat-header-cell *matHeaderCellDef class="header-table" mat-sort-header sortActionDescription="Sort by name"> 
+
+    <th mat-header-cell *matHeaderCellDef class="header-table" mat-sort-header sortActionDescription="Sort by name">
       {{ConvertToTitleCase(column)}} </th>
 
     <td mat-cell *matCellDef="let element"> {{element[column]}} </td>
-    
+
   </ng-container>
 
   <!-- Expanded Content Column - The detail row is made up of this one column that spans across all columns -->
   <ng-container matColumnDef="expandedDetail">
     <td mat-cell *matCellDef="let element" [attr.colspan]="columnsToDisplay.length">
 
-        <div class="example-element-detail" [@detailExpand]="element == expandedElement ? 'expanded' : 'collapsed'">
-          <span class="spacer"></span>
-          <div>
+      <div class="example-element-detail" [@detailExpand]="element == expandedElement ? 'expanded' : 'collapsed'">
+        <!-- Expiriment -->
+        <mat-form-field class="example-full-width" appearance="standard">
+          <mat-label>Mark</mat-label>
+          <input mdInput type="number" [formControl]="markControl" matInput placeholder="Mark" [value]="element.mark"
+            [min]="0" max="100" step="1">
+        </mat-form-field>
+        <!-- End Expiriment -->
 
-            
-            
-            
-            <button mat-stroked-button color="accent" class="inner-button">Edit</button>
-            <button mat-stroked-button color="warn" class="inner-button" (click)="deleteCourse(0)">Delete</button>
-            
-            <!-- <div class="example-element-description">
+
+        <span class="spacer"></span>
+        <div>
+
+
+
+
+
+          <button mat-stroked-button color="accent" class="inner-button">Edit</button>
+          <button mat-stroked-button color="warn" class="inner-button" (click)="deleteCourse(element)">Delete</button>
+
+          <!-- <div class="example-element-description">
               {{element.description}}
               <span class="example-element-description-attribution"> -- Wikipedia </span>
             </div> -->
-            
-            
-            <!-- <div style="margin-bottom: 1rem;"></div> -->
-            
-          </div>
+
+
+          <!-- <div style="margin-bottom: 1rem;"></div> -->
+
         </div>
-        
+      </div>
+
     </td>
   </ng-container>
   <tr mat-header-row *matHeaderRowDef="columnsToDisplay; sticky: true"></tr>
@@ -50,5 +59,8 @@ matSort (matSortChange)="announceSortChange()"
   </tr>
   <tr mat-row *matRowDef="let row; columns: ['expandedDetail']" class="example-detail-row"></tr>
 </table>
+
+<mat-paginator #paginator [pageIndex]="0" [pageSize]="10" [pageSizeOptions]="[10, 25, 50]">
+</mat-paginator>
 
 <mat-divider></mat-divider>
