Edit course mark , update average after edit

--- a/Degree-Average-Front/src/app/components/info-data/info-data/info-data.component.html
+++ b/Degree-Average-Front/src/app/components/info-data/info-data/info-data.component.html
@@ -7,7 +7,7 @@
 
     <p>Points : {{ points }}</p>
     <p> </p>
-    <p> ==>   {{ average }} <== </p>
+    <p> ==>   {{ averageChanged }} <== </p>
 
   </div>
 
