--- a/Degree-Average-Front/src/app/components/table-data/table-courses/table-courses.component.html
+++ b/Degree-Average-Front/src/app/components/table-data/table-courses/table-courses.component.html
@@ -19,7 +19,7 @@
   <ng-container matColumnDef="expandedDetail">
     <td mat-cell *matCellDef="let element" [attr.colspan]="columnsToDisplay.length">
 
-      <div class="example-element-detail" [@detailExpand]="element == expandedElement ? 'expanded' : 'collapsed'">
+      <div class="example-element-detail" [@detailExpand]="expentedAction(element)">
         <!-- Expiriment -->
         <mat-form-field class="example-full-width" appearance="standard">
           <mat-label>Mark</mat-label>
@@ -36,7 +36,7 @@
 
 
 
-          <button mat-stroked-button color="accent" class="inner-button">Edit</button>
+          <button mat-stroked-button color="accent" class="inner-button" (click)="editCourse(element)">Edit</button>
           <button mat-stroked-button color="warn" class="inner-button" (click)="deleteCourse(element)">Delete</button>
 
           <!-- <div class="example-element-description">
