Added search by years to statistics .

--- a/Degree-Average-Front/src/app/components/info-data/info-data/info-data.component.html
+++ b/Degree-Average-Front/src/app/components/info-data/info-data/info-data.component.html
@@ -2,12 +2,12 @@
   <div>
 
 
-    <p> Average : {{ average }} </p>
+    <p> Average : {{ showWith2PointsAfterDecimal(average) }} </p>
     <p> </p>
 
     <p>Points : {{ points }}</p>
     <p> </p>
-    <p> ==>   {{ averageChanged }} <== </p>
+    <p> ==> {{ showWith2PointsAfterDecimal(averageChanged) }} <== </p>
 
   </div>
 
