--- a/Degree-Average-Front/src/app/components/info-data/info-data/statistic/statistic/statistic.component.css
+++ b/Degree-Average-Front/src/app/components/info-data/info-data/statistic/statistic/statistic.component.css
@@ -27,3 +27,7 @@ mat-divider {
  align-items: center;
   justify-content: center;
 }
+
+.example-container .mat-form-field + .mat-form-field {
+  margin-left: 8px;
+}
