Average by year in stastistic.

--- a/Degree-Average-Front/src/app/app.component.html
+++ b/Degree-Average-Front/src/app/app.component.html
@@ -1,4 +1,4 @@
-<app-nav-bar></app-nav-bar>
+<app-nav-bar class="centeralize"></app-nav-bar>
 
 <main>
 
@@ -6,9 +6,11 @@
 
   <app-statistic></app-statistic> -->
 
+<!-- <div style="height: 4rem"></div> -->
 <div style="height: 4rem"></div>
 
-  <div class="centeralize">
+  <!-- <div class="centeralize"> -->
+  <div class="tryit">
     <!-- <app-table-courses></app-table-courses> -->
     <router-outlet></router-outlet>
   </div>
