--- a/Degree-Average-Front/src/app/components/info-data/info-data/info-data.component.html
+++ b/Degree-Average-Front/src/app/components/info-data/info-data/info-data.component.html
@@ -1,13 +1,19 @@
-<div class="box morePadding">
+<div class="low  morePadding">
   <div>
 
 
-    <p> Average : {{ showWith2PointsAfterDecimal(average) }} </p>
-    <p> </p>
+    <!-- <p> Average : {{ showWith2PointsAfterDecimal(average) }} </p> -->
+    <!-- <h2>  A<span style="color: red;">v</span>er<span style="color: green;">age</span> : {{ showWith2PointsAfterDecimal(average) }} </h2> -->
+    
+    <!-- <div class=""> -->
 
-    <p>Points : {{ points }}</p>
+      <h1 class="thick-txt">  Average : {{ showWith2PointsAfterDecimal(average) }} </h1>
+    <!-- </div> -->
+    <!-- <br> -->
+ 
+    <h3 class="underline-points">Points : {{ points }}</h3>
     <p> </p>
-    <p> ==> {{ showWith2PointsAfterDecimal(averageChanged) }} <== </p>
+    <h2> ==> {{ showWith2PointsAfterDecimal(averageChanged) }} <== </h2>
 
   </div>
 
