--- a/Degree-Average-Front/src/app/components/info-data/info-data/statistic/statistic/statistic.component.html
+++ b/Degree-Average-Front/src/app/components/info-data/info-data/statistic/statistic/statistic.component.html
@@ -51,10 +51,15 @@
   <div class="sidespace">
     <!-- <p>Value : {{value}}</p> -->
     <!-- <p>Value FormControl : {{freePointsControl.value}}</p> -->
-    <p [ngClass]="{'make-red' :   numberFreePoints > 100 }">Freestyle Points : {{ numberFreePoints }}</p>
+    <h3 [ngClass]="{'make-red' :   numberFreePoints > 100 }">Freestyle Points : {{ numberFreePoints }}</h3>
+    <p></p>
   </div>
 
   <mat-divider></mat-divider>
+
+
+  <div style="margin-bottom: 3rem;"></div>
+
 
 
   <H2>Best Courses To Improve : </H2>
